# codex-precisely

./: LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml
codex_chronicle/: __main__.py  _entrypoint.py  batch.py  codex_cli.py  config.py  daemon.py  doctor.py  extractor.py  filtering.py  hook.py  insight.py  install_hooks.py  locks.py  mode.py  query.py  rewind.py  service.py  storage.py  story.py  summarizer.py
tests/unit/: test_install_hooks.py
