[project]
name = "codex-chronicle"
version = "0.1.0"
description = "Hook-triggered persistent session knowledge tracker for Codex CLI"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[project.scripts]
codex-chronicle = "codex_chronicle.__main__:main"
codex-chronicle-hook = "codex_chronicle.hook:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
